[FIX] sap.m.ObjectStatus: Truncates when used inside Table
BCP: 1670424957
(cherry picked from commit 822fb08ea7c3b5b679f395101eb3348bdc6421de)
CR-Id: 012003146900000707532016

--- a/src/sap.m/src/sap/m/themes/base/ObjectStatus.less
+++ b/src/sap.m/src/sap/m/themes/base/ObjectStatus.less
@@ -27,6 +27,12 @@ html.sap-phone .sapMObjStatusIcon {
 	padding-right: .25rem;
 }
 
+.sapUiTableCell .sapMObjStatus {
+	text-overflow: ellipsis;
+	white-space: nowrap;
+	overflow: hidden;
+}
+
 .sapUiTableCell .sapMObjStatusText,
 .sapUiTableCell .sapMObjStatusTitle,
 .sapUiTableCell .sapMObjStatusIcon .sapUiIcon,
